sumo/tests/netconvert/errors/errors/broken_edge/edge#tonode__missing1/errors.netconvert
Error: Neither the name nor the position of the to-node is given for edge '1'.
Quitting (on error).
